Update meta tags and content in index.html

--- a/quiz/index.html
+++ b/quiz/index.html
@@ -12,12 +12,24 @@
     <meta name="author" content="Vegeta's Elite Training Academy">
     <meta name="robots" content="index, follow">
     
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Vegeta's Elite Saiyan Quiz - Questions">
-    <meta property="og:description" content="Test your Dragon Ball Z knowledge with Vegeta's Elite Saiyan Quiz. Answer 20 elite questions and prove your worth!">
-    <meta property="og:locale" content="en_US">
-    <meta property="og:site_name" content="Vegeta's Elite Saiyan Quiz">
+   <meta property="og:type" content="website">
+<meta property="og:title" content="Vegeta's Elite Saiyan Quiz - Dragon Ball Z Knowledge Test">
+<meta property="og:description" content="Think you have what it takes to impress the Prince of all Saiyans? Test your Dragon Ball Z knowledge with 20 elite questions!">
+
+<meta property="og:image" content="https://sarthak-khatri.github.io/elite-saiyan-quiz/assets/Elite.png">
+<meta property="og:image:type" content="image/png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:image:alt" content="Elite Saiyan Rank - Dragon Ball Z Quiz">
+
+<meta property="og:url" content="https://sarthak-khatri.github.io/elite-saiyan-quiz/">
+<meta property="og:site_name" content="Vegeta's Elite Saiyan Quiz">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Vegeta's Elite Saiyan Quiz">
+<meta name="twitter:description" content="Prove your DBZ knowledge and earn your Saiyan rank!">
+<meta name="twitter:image" content="https://sarthak-khatri.github.io/elite-saiyan-quiz/assets/Elite.png">
+
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="../assets/fab.ico">
@@ -130,3 +142,4 @@
     <script src="../assets/main.js"></script>
 </body>
 </html>
+
