--- a/quiz/index.html
+++ b/quiz/index.html
@@ -16,8 +16,22 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Vegeta's Elite Saiyan Quiz - Questions">
     <meta property="og:description" content="Test your Dragon Ball Z knowledge with Vegeta's Elite Saiyan Quiz. Answer 20 elite questions and prove your worth!">
+    <meta property="og:image" content="https://sarthak-khatri.github.io/Dragon_ball-_quiz/assets/og.png">
+    <meta property="og:image:secure_url" content="https://sarthak-khatri.github.io/Dragon_ball-_quiz/assets/og.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Dragon Ball Z Quiz - Test Your Knowledge">
+    <meta property="og:url" content="https://sarthak-khatri.github.io/Dragon_ball-_quiz/quiz/">
     <meta property="og:locale" content="en_US">
     <meta property="og:site_name" content="Vegeta's Elite Saiyan Quiz">
+    
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Vegeta's Elite Saiyan Quiz - Questions">
+    <meta name="twitter:description" content="Test your Dragon Ball Z knowledge with Vegeta's Elite Saiyan Quiz. Answer 20 elite questions and prove your worth!">
+    <meta name="twitter:image" content="https://sarthak-khatri.github.io/Dragon_ball-_quiz/assets/og.png">
+    <meta name="twitter:image:alt" content="Dragon Ball Z Quiz - Test Your Knowledge">
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="../assets/fab.ico">
