--- a/result/index.html
+++ b/result/index.html
@@ -16,8 +16,22 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Vegeta's Elite Saiyan Quiz - Results">
   <meta property="og:description" content="See your Dragon Ball Z quiz results! Discover your Saiyan rank and power level after completing the elite challenge.">
+  <meta property="og:image" content="https://sarthak-khatri.github.io/Dragon_ball-_quiz/assets/og.png">
+  <meta property="og:image:secure_url" content="https://sarthak-khatri.github.io/Dragon_ball-_quiz/assets/og.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="Dragon Ball Z Quiz - Test Your Knowledge">
+  <meta property="og:url" content="https://sarthak-khatri.github.io/Dragon_ball-_quiz/result/">
   <meta property="og:locale" content="en_US">
   <meta property="og:site_name" content="Vegeta's Elite Saiyan Quiz">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Vegeta's Elite Saiyan Quiz - Results">
+  <meta name="twitter:description" content="See your Dragon Ball Z quiz results! Discover your Saiyan rank and power level after completing the elite challenge.">
+  <meta name="twitter:image" content="https://sarthak-khatri.github.io/Dragon_ball-_quiz/assets/og.png">
+  <meta name="twitter:image:alt" content="Dragon Ball Z Quiz - Test Your Knowledge">
   
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="../assets/fab.ico">
